# comctl32v6hook

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  build.cmd  comctl32v6hook.manifest  dllmain.cpp  install.cmd  uninstall.cmd  vcpkg.json
examples/: test-msgbox.vbs
scripts/: build.ps1  install.ps1  uninstall.ps1
